docs: Add new features