@@ -14,6 +14,9 @@ Modern Java 25 Maven template with best practices, testing excellence, and CI/CD
 
 **⚙️ Build & Quality**
 - Maven Wrapper (no local Maven required)
+- Java Preview Features enabled (--enable-preview)
+- Maven Build Cache Extension 1.2.0 for faster incremental builds
+- OpenTelemetry Maven Extension 1.50.0-alpha for build tracing
 - Spotless code formatting with Google Java Format (AOSP style)
 - GitHub Actions CI/CD with Oracle JDK 25
 
